chore: #8 Backend - rename "Message" to "Event", "MessageService" to "EventPublisher" to clarify that the messages are actually events